testsuite/tests/parser/should_fail/T15849.hs
module T15849 where

main = return ()
 foo = return ()
