testsuite/tests/parser/should_fail/T15849.stderr

T15849.hs:4:6: error: [GHC-58481] parse error on input ‘=’
